--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="attribution">
     <p>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Santiago L Martinez</a>.
+    Coded by <a href="https://www.linkedin.com/in/santiago-l-martinez/" target="_blank">Santiago L Martinez</a>.
     </p>
   </div>
 </div>
